--- a/kitchen_bot/example.env
+++ b/kitchen_bot/example.env
@@ -3,5 +3,5 @@ DB_PASS=example_pass
 DB_NAME=gino
 ADMIN_ID=123321
 TOKEN=123123_ABCDefgh
-LIQPAY_TOKEN=123:TEST:123
+CLICK_TOKEN=123:TEST:123  #instalgan to`lov tizimi
 IP=192.168.99.100
